deployment/kubernetes-manifests/k8s-deployment/newrelic-k8s-integration.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: newrelic
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: newrelic
  name: newrelic-infrastructure
  labels:
    app: newrelic-infrastructure
spec:
  selector:
    matchLabels:
      name: newrelic-infrastructure
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: newrelic-infrastructure
      annotations:
        # Annotation to restart pods if the configmap changes
        checksum/nri-kubernetes: 8a5d3a3c56cc8b3cc301e80de9d1b1f0c91ea9e4
    spec:
      serviceAccountName: newrelic
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: newrelic-infrastructure
        image: newrelic/infrastructure-k8s:3.2.40
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 1000
        volumeMounts:
        - name: dev
          mountPath: /dev
          readOnly: true
        - name: host-docker-socket
          mountPath: /var/run/docker.sock
          readOnly: true
        - name: host-volume
          mountPath: /host
          readOnly: true
        - name: etc-kubernetes
          mountPath: /etc/kubernetes
          readOnly: true
        - name: etc-machine-id
          mountPath: /etc/machine-id
          readOnly: true
        - name: nri-mysql-config
          mountPath: /etc/newrelic-infra/integrations.d/
          readOnly: true
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 500Mi
            cpu: 300m
      volumes:
      - name: dev
        hostPath:
          path: /dev
      - name: host-docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: host-volume
        hostPath:
          path: /
      - name: etc-kubernetes
        hostPath:
          path: /etc/kubernetes
      - name: etc-machine-id
        hostPath:
          path: /etc/machine-id
      - name: nri-mysql-config
        configMap:
          name: nri-mysql-config
      tolerations:
      - operator: "Exists"
        effect: "NoSchedule"
      - operator: "Exists"
        effect: "NoExecute"
