deployment/kubernetes-manifests/k8s-deployment/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: store
  name: ts-loadgenerator
spec:
  selector:
    matchLabels:
      app: ts-loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-loadgenerator
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - node8
      containers:
      - name: ts-loadgenerator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        image: newrelic/train-ticket:ts-loadgenerator-0.1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 3000m
            memory: 10Gi
          limits:
            cpu: 3500m
            memory: 12Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: store
  name: ts-loadgenerator
spec:
  type: ClusterIP
  selector:
    app: ts-loadgenerator
  ports:
  - name: http
    port: 8089
    targetPort: 8089
