deployment/kubernetes-manifests/k8s-deployment/ts-deployment-part3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: store
  name: ts-ui-dashboard
spec:
  selector:
    matchLabels:
      app: ts-ui-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - node4
      containers:
      - name: ts-ui-dashboard
        image: newrelic/train-ticket:ts-ui-dashboard-0.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: store
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    nodePort: 32677
  selector:
    app: ts-ui-dashboard
---
