deployment/kubernetes-manifests/k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ingress
  namespace: store
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-ui-dashboard
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chaos-dashboard-proxy
  namespace: store
spec:
  type: ExternalName
  externalName: chaos-dashboard.chaos-mesh.svc.cluster.local
  ports:
  - port: 2333
    targetPort: 2333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-mesh-ingress
  namespace: store
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-snippet: |
      sub_filter '<head>' '<head> <base href="/chaos-mesh/">';
      sub_filter_once off;
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /chaos-mesh/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chaos-dashboard-proxy
                port:
                  number: 2333
